# eyeD3

./: .travis.yml  MANIFEST.in  Makefile  parcyl.py  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: eyed3.rst
eyed3/: __about__.py  __init__.py  core.py  main.py  mimetype.py
eyed3/plugins/: fixup.py
eyed3/utils/: log.py
requirements/: dev.txt  extra_art-plugin.txt  extra_display-plugin.txt  extra_yaml-plugin.txt  install.txt  requirements.txt  test.txt
src/eyed3/: __about__.py  __init__.py  core.py  main.py
src/eyed3/id3/: frames.py  tag.py
src/eyed3/mp3/: __init__.py
src/eyed3/plugins/: classic.py  fixup.py  jsontag.py
src/eyed3/utils/: log.py
src/test/id3/: test_tag.py
