[tool:parcyl]
setup = Parcyl
install = python-magic
          pathlib; python_version < '3.4'
          six

extra_display-plugin = grako
extra_art-plugin = pylast~=2.0
                   requests
                   pillow
test = tox
       pytest
       pytest-cov
       pytest-runner
       factory-boy
       mock; python_version < '3.4'

dev = parcyl[requirements]
      nicfit.py[cookiecutter]
      detox
      check-manifest
      flake8
      pdbpp
      twine
      wheel
      Sphinx
      sphinx_rtd_theme
      sphinx-issues
      hg+https://nicfit@bitbucket.org/nicfit/sphinxcontrib-bitbucket
      cogapp
      sphinxcontrib-paverutils

[wheel]
universal = 1

[flake8]
max-line-length = 100
statistics = 1
ignore = E121,E124,E126,E127,E128,E131,E266,W504

[aliases]
test = pytest

# coverage+pytest setting (coverage: prefix not working.)
[html]
directory = build/tests/coverage

# coverage+pytest setting (coverage: prefix not working.)
[run]
omit = /tmp/*

[tool:pytest]
addopts = --verbose

[metadata]
license_file = LICENSE
