[tool:parcyl-info]
version = 0.8.10a67
release_name = Descent Into...
years = 2002-2019
project_name = eyeD3
author = Travis Shirk
author_email = travis@pobox.com
license = GNU GPL v3.0
url = http://eyed3.nicfit.net/
github_url = https://github.com/nicfit/eyeD3
description = Python audio data toolkit (ID3 and MP3)
long_description =
    eyeD3 is a Python module and command line program for processing ID3 tags.
    Information about mp3 files (i.e bit rate, sample frequency,
    play time, etc.) is also provided. The formats supported are ID3
    v1.0/v1.1 and v2.3/v2.4.
classifiers =
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Topic :: Multimedia :: Sound/Audio :: Editors
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Operating System :: POSIX
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[tool:parcyl-requirements]
install = python-magic
          pathlib; python_version < '3.4'
          six

extra_display-plugin = grako
extra_art-plugin = pylast~=2.0
                   requests
                   pillow
test = tox
       pytest
       pytest-cov
       pytest-runner
       factory-boy
       mock; python_version < '3.4'

dev = parcyl[requirements]
      nicfit.py[cookiecutter]
      detox
      check-manifest
      flake8
      pdbpp
      twine
      wheel
      Sphinx
      sphinx_rtd_theme
      sphinx-issues
      hg+https://nicfit@bitbucket.org/nicfit/sphinxcontrib-bitbucket
      cogapp
      sphinxcontrib-paverutils

[wheel]
universal = 1

[flake8]
max-line-length = 100
statistics = 1
ignore = E121,E124,E126,E127,E128,E131,E266,W504

[aliases]
test = pytest

# coverage+pytest setting (coverage: prefix not working.)
[html]
directory = build/tests/coverage

# coverage+pytest setting (coverage: prefix not working.)
[run]
omit = /tmp/*

[tool:pytest]
addopts = --verbose

[metadata]
license_file = LICENSE
